@@ -54,9 +54,10 @@ public:
     virtual void applyScrollDelta(const IntSize&) = 0;
     virtual PassRefPtr<GraphicsContext3D> createLayerTreeHostContext3D() = 0;
     virtual void didRecreateGraphicsContext(bool success) = 0;
-#if !USE(THREADED_COMPOSITING)
+
+    // Used in the non-threaded path
     virtual void scheduleComposite() = 0;
-#endif
+
 protected:
     virtual ~CCLayerTreeHostClient() { }
 };
